  daily traffic counters.
- Added a warning message in 'disk.pm' that if some of the disk devices defined
  is not present in the system the initialization will be aborted. [#151]
- Added a message in 'libvirt.pm' if the MAC address of a VM is not found.
- Added Slovak translation to monthly reports. [#157]
- Improved a bit the documentation of socked type in MySQL. [#47]
- Fixed in 'libvirt.pm' limiting to 100 all CPU values greater than 100.
- Fixed in 'libvirt.pm' to hide empty groups.
  	(thanks to Pavel Bauer, pbauer AT algotech.cz for pointing this out)
- Fixed 'serv.pm' to support newer versions of fail2ban.
- Fixed to show the memory usage correctly in 'phpapc.pm'.
- Fixed in 'zfs.pm' to convert FRAG to a numeric value if it's not used in the
  pool. [#138]
- Fixed a possible uninitialized value in 'HTTPServer.pm' at line 37.
- Fixed wrong processor number value parsed in 'proc.pm'. [#155]


3.8.1  - 13-Nov-2015
====================
- Added support in ZFS graph for versions older than 0.6.4.
- Added the new option 'extra_args' in 'ntp.pm' to be able to include extra
  arguments to the command executed by Monitorix.
	(suggested by Matti Pentti, Matti.Pentti AT cimcorp.com)
- Added SMART temperature ID 190 as a fallback option if 194 is missing. [#121]
- Fixed a missing identifier in sprintf(). [#109]
- Fixed a message of 'use of uninitialized value' in 'port.pm'. [#110]
- Fixed the Y-axis title in 'fail2ban.pm'. [#111]
- Fixed to avoid negative values in the network graph of 'process.pm'. [#117]
- Fixed to force a rigid scale in the memory graph.
	(thanks to Lane Russell, lanerussell028 AT gmail.com for pointing this out)
- Fixed the scale of the y-axis in 'du'.
- Fixed a DOM based XSS and a potential DoS vulnerabilities that affected the
  'when' parameter of the 'monitorix.cgi' file.
	(thanks to Dolev Farhi, farhi AT F5.com for pointing this out)
- Small cosmetic changes.


3.8.0  - 16-Sep-2015
====================